--- a/packages/styles/src/includes/helpers.pcss
+++ b/packages/styles/src/includes/helpers.pcss
@@ -1,3 +1,4 @@
+/** Positioning */
 .h-fixed-bottom {
   position: fixed;
   bottom: 0;
@@ -20,6 +21,7 @@
   position: absolute;
 }
 
+/** Colors */
 .h-color-gray-darker {
   color: $gray-darker;
 }
@@ -34,4 +36,25 @@
 
 .h-color-gray-lightest {
   color: $gray-lightest;
+}
+
+/** Text */
+.h-text-uppercase {
+  text-transform: uppercase;
+}
+
+.h-text-lowercase {
+  text-transform: lowercase;
+}
+
+.h-text-center {
+  text-align: center;
+}
+
+.h-text-left {
+  text-align: left;
+}
+
+.h-text-right {
+  text-align: right;
 }
