refactor: 💡 Remove unused logic

--- a/packages/components/Tabs/Tabs.html
+++ b/packages/components/Tabs/Tabs.html
@@ -1,5 +1,5 @@
 <div class="tabs">
-  {#if _tabs && _tabs.length}
+  {#if _tabs.length}
   <table class="tab-navigation">
     <tr>
       {#each _tabs as tab, key}
