style: 💄 small code formatting

--- a/packages/components/Tabs/Tabs.html
+++ b/packages/components/Tabs/Tabs.html
@@ -31,8 +31,7 @@
       const _tabs = [].filter.call(
         this.refs.container.children,
         element =>
-          element.classList.contains('tab-pane') &&
-          element.title !== 'undefined',
+          element.classList.contains('tab-pane') && element.title !== 'undefined',
       );
 
       this.set({ _tabs });
