--- a/packages/components/Range/example/Example.html
+++ b/packages/components/Range/example/Example.html
@@ -29,6 +29,11 @@
   <div class="row">
     <Range icon="static/brightness.png" on:change="console.log(event)"/>
   </div>
+
+  <h4>Com validação entre 20% e 80%</h4>
+  <div class="row">
+    <Range validation={rangeValidation} on:change="console.log(event)"/>
+  </div>
 </div>
 
 <style>
@@ -54,6 +59,11 @@
   export default {
     components: {
       Range: '@mamba/range/Range.html',
+    },
+    data() {
+      return {
+        rangeValidation: value => value >= 20 && value <= 80,
+      };
     },
   };
 </script>
