--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -25,6 +25,11 @@ $dialog-positive-color: $stone-green;
 $dialog-confirmation-primary-color: $gray-dark;
 $dialog-confirmation-text-color: $white;
 
+/** AdminLock component */
+$adminlock-negative-color: $red-light;
+$adminlock-text-color: $gray-dark;
+$adminlock-background-color: #f0f0f0;
+
 $button-primary-color: $green;
 $button-text-color: $white;
 
