feat: 🎸 change row label size to 14px

--- a/packages/components/Collection/Row.html
+++ b/packages/components/Collection/Row.html
@@ -193,8 +193,8 @@
   }
 
   .label {
-    font-size: 13px;
-    font-weight: bold;
+    font-size: $row-font-size;
+    font-weight: 500;
     word-wrap: break-word;
     flex-grow: 1;
 
