--- a/packages/styles/src/includes/components/row.pcss
+++ b/packages/styles/src/includes/components/row.pcss
@@ -6,7 +6,7 @@
   align-items: center;
   background-color: #fff;
   border-bottom: 1px solid $row-border-color;
-  font-size: 13px;
+  font-size: $row-font-size;
 
   &.-light {
     background-color: $gray-lightest;
