--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -12,6 +12,7 @@ $row-border-color: $gray-lighter;
 $row-bg-color: $white;
 $row-primary-color: $gray-darker;
 $row-secondary-color: $gray;
+$row-font-size: 14px;
 
 /** Input component */
 $input-border-color: $gray-lighter;
