--- a/packages/components/App/AdminLock.html
+++ b/packages/components/App/AdminLock.html
@@ -1,25 +1,31 @@
 {#if _showLockPopUp}
-<div class="dialog-wrapper">
-  <div class="dialog" ref:dialog>
-    <div class="message">Digite a senha administrativa para continuar.</div>
-    <input type="password" ref:password/>
-    <div class="btns-wrapper">
-      <Button
-        secondary
-        bgColor="#425963"
-        width="48%"
-        on:click="close()">
-          Voltar
-      </Button>
-      <Button
-        width="48%"
-        on:click="auth()">
-        Confirmar
-      </Button>
+  <div class="dialog-wrapper">
+    <div class="dialog" ref:dialog>
+      <div class="message">Digite a senha administrativa para continuar.</div>
+      <input type="password" ref:password/>
+      <table class="btns-wrapper">
+        <td>
+          <Button
+            secondary
+            bgColor="#425963"
+            width="100%"
+            on:click="close()">
+              Voltar
+          </Button>
+        </td>
+        <td style="width: 4%;"></td>
+        <td>
+          <Button
+            width="100%"
+            on:click="auth()">
+            Confirmar
+          </Button>
+        </td>
+      </table>
     </div>
   </div>
-</div>
-<KeyStroke key="enter" on:keystroke="auth()"></KeyStroke>
+
+  <KeyStroke key="enter" on:keystroke="auth()" />
 {/if}
 
 
@@ -49,21 +55,23 @@
       },
       auth() {
         const success = Merchant.checkPassword(this.refs.password.value);
-        this.fire('authentication', {
-          success,
-        });
+
+        this.fire('authentication', { success });
+
         if (success) {
           this.close();
-        } else {
-          this.refs.password.value = '';
-          this.refs.dialog.classList.add('shaking');
-          this.refs.password.classList.add('error');
-          setTimeout(() => {
-            this.refs.dialog.classList.remove('shaking');
-            this.refs.password.classList.remove('error');
-            this.refs.password.focus();
-          }, 820);
+          return;
         }
+
+        this.refs.password.value = '';
+        this.refs.dialog.classList.add('shaking');
+        this.refs.password.classList.add('error');
+        this.refs.password.focus();
+
+        setTimeout(() => {
+          this.refs.dialog.classList.remove('shaking');
+          this.refs.password.classList.remove('error');
+        }, 820);
       },
     },
   };
@@ -102,17 +110,14 @@
     text-align: center;
     height: 44px;
     margin-bottom: 15px;
-    border: none;
     font-size: 26px;
     max-width: 100%;
+    border: 2px solid transparent;
+    transition: border-color 0.3s ease;
   }
 
   .dialog-wrapper :global(input.error) {
-    border: 2px solid $adminlock-negative-color;
-  }
-
-  input:focus {
-    border: none;
+    border-color: $adminlock-negative-color;
   }
 
   .message {
@@ -124,14 +129,8 @@
   }
 
   .btns-wrapper {
-    text-align: justify;
-    margin-bottom: -10px;
-
-    &::after {
-      content: '';
-      width: 100%;
-      display: inline-block;
-    }
+    table-layout: fixed;
+    width: 100%;
   }
 
   @keyframes shake {
