--- a/packages/components/Button/Button.html
+++ b/packages/components/Button/Button.html
@@ -54,16 +54,9 @@
     },
     oncreate() {
       if (this.options.data) {
-        const { width, shortcut } = this.options.data;
+        const { shortcut } = this.options.data;
         if (typeof shortcut !== 'undefined') {
           this.refs.button.setAttribute('shortcut', shortcut);
-        }
-
-        if (typeof width !== 'undefined' && width === '100%') {
-          if (__DEV__) {
-            console.warn('Use size="full" for @mamba/buttons with 100% width');
-          }
-          this.set({ size: 'full' });
         }
       }
     },
