refactor: 💡 add border radius to input

--- a/packages/components/App/AdminLock.html
+++ b/packages/components/App/AdminLock.html
@@ -106,13 +106,14 @@
   }
 
   input {
-    padding: 20px;
-    text-align: center;
-    height: 44px;
-    margin-bottom: 15px;
-    font-size: 26px;
     max-width: 100%;
+    height: 44px;
     border: 2px solid transparent;
+    border-radius: 3px;
+    margin-bottom: 15px;
+    padding: 20px;
+    font-size: 26px;
+    text-align: center;
     transition: border-color 0.3s ease;
   }
 
@@ -121,10 +122,10 @@
   }
 
   .message {
-    font-size: 13px;
     margin-bottom: 15px;
-    font-weight: 500;
     color: $adminlock-text-color;
+    font-size: 13px;
+    font-weight: 500;
     line-height: 20px;
   }
 
