--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -36,9 +36,9 @@ $button-text-color: $white;
 
 $switch-unchecked-bg: $silver;
 $switch-unchecked-color: $seashell;
-$switch-checked-bg: rgba($green, 0.5);
+$switch-checked-bg: $stone-green-light;
 $switch-checked-color: $green;
-$switch-disabled-bg: $silver;
+$switch-disabled-bg: $silver-light;
 $switch-disabled-color: $silver;
 
 /* Tabs component */
